# citation-resolution

./: LICENSE  README.md  greek-citation_counts.csv  latin-citation_counts.csv  latin-citation_map.json  main.py  pyproject.toml
src/citation_resolution/: resolver.py
src/citation_resolution/static/json/: inverted_urn.json  ocd_abbreviations.json
